<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.penyedia.LoginActivity">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:id="@+id/layout1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email_txt"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_nama_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_below="@id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout2"
            android:orientation="horizontal"
            android:layout_below="@id/password"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/login"
                android:background="@color/colorAccent"
                android:textColor="#FFF"/>

        </LinearLayout>


        <TextView
            android:layout_below="@id/layout2"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="Ingin laundry anda terdaftar? silahkan hubungi \n admin@warung-laundry.com"
            android:textAlignment="center"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:layout_gravity="center"
            android:text="@string/pengguna_laundry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_laundry"
            android:id="@+id/change_btn"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:clickable="true"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_above="@id/layout1"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ico"
            android:layout_marginRight="12dp"
            android:src="@drawable/truc_ico"/>
        <LinearLayout
            android:layout_toEndOf="@id/ico"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/masuk_sebagai"
                android:layout_height="wrap_content"
                android:text="Masuk sebagai :"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:text="Penyedia Jasa"
                android:id="@+id/pengguna_jasa"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="Laundry"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
